# avoid-confluence

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  NEWS  README  README.org  TODO  setup.cfg
avoidconfluence/: confluence_helper.py  custom_modification.py  main.py  pandoc_jira.py  utils.py
config/: .av-config.ini  .pre-commit-config.yaml
examples/: .channels-lock.scm  .envrc  .pre-commit-config.yaml
