[metadata]
name = avoid-confluence
version = 0.1
description= Automate the sync-up process to confluence from your local notes
url=http://gitlab.com/madhavank/avoid-confluence
author=Madhavan Krishnan
author_email=krishnanmadhavan000@gmail.com
license=MIT
zip_safe=False

[options]
packages = find:
install_requires =
    atlassian-python-api
    pre-commit
    pypandoc

python_requires = >=3.6.1

#package_dir =
#    =src/

[options.entry_points]
console_scripts =
    ac=avoidconfluence.main:main

[bdist_wheel]
universal = True
